# 2025-A09

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SESSION_NAMING_IMPLEMENTATION.md  chat_web_app.py  check_toolcall.py  code_executor.py  components.d.ts  demo.py  docker-compose.yml  docker_runner.py  docker_runner_app.py  dremio_client.py  eslint.config.ts  example_template.txt  generate_test_data.py  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  session_name_test.html  start.bat  start.sh  test.csv  test.py  test_agent.py  test_dremio.py  test_langchain.py  test_langgraph.py  test_mcp.py  test_models.py  test_session_naming.py  test_tool_call.py  test_web_app.py  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  (+2 more)
.github/workflows/: build-backend.yml  build-executor.yml  build-fault-diagnosis.yml  build-frontend.yml  build-spare-parts.yml  lint-backend.yml  lint-frontend.yml
app/: __init__.py  __main__.py  agent.py  agent_tools.py  const.py  dremio_client.py  exception.py  executor.py  log.py  log_config.json  logo.py  main.py  other_tools.py  tool.py  utils.py
app/agent_tools/: analyzer.py  dataframe.py
app/agent_tools/dataframe/: __init__.py  columns.py  scikit.py  scikit_features.py
app/api/: __init__.py  _depends.py  agent_source.py  auth.py  chat.py  clean.py  datasources.py  file.py  health.py  mcp.py  model_config.py  models.py  sessions.py  workflow.py
app/api/v1/: __init__.py  analysis.py  chat.py  clean.py  datasets.py  datasources.py  dremio.py  mcp.py  model_config.py  models.py  sessions.py  uploads.py
app/chain/: __init__.py  general_analysis.py  llm.py  nl_analysis.py
app/core/: config.py  database.py  dremio.py  executor.py  lifespan.py  model_registry.py
app/core/agent/: __init__.py  agent.py  clean_data_agent.py  data_analyzer.py  events.py  resume.py  schemas.py  sources.py
app/core/agent/agents/: clean_data.py  data_analyzer.py
app/core/agent/prompts/: _prompts.py
app/core/agent/tools/: __init__.py  _registry.py  analyzer.py  registry.py  sources.py
app/core/chain/: __init__.py  _base.py  general_analysis.py  llm.py  nl_analysis.py
app/core/database/: __init__.py
app/core/datasource/: __init__.py  csv.py  dremio.py  file.py  memory.py  pd.py  source.py
app/core/dremio/: __init__.py  _cache.py  abstract.py  aflight.py  arest.py  flight.py  rest.py  tmp_source.py
app/core/executor/: __init__.py  abstract.py  compose.py  container.py  utils.py
app/core/schema/: chat.py  session.py
app/schemas/: chat.py  custom_model.py  dremio.py  mcp.py  ml_model.py  session.py  workflow.py
app/services/: agent.py  custom_model.py  datasource.py  mcp.py  model_registry.py  report_export.py  session.py  workflow.py
docker/: Dockerfile.backend  Dockerfile.executor  Dockerfile.fault-diagnosis  Dockerfile.frontend  Dockerfile.runner  Dockerfile.spare-parts  compile_pyc.py  debian.sources  docker-compose.yml  executor.py  gunicorn_conf.py  nginx.conf  requirements.executor.txt  setup-docker-apt.sh
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: main.scss
frontend/src/components/: EmptyState.vue  LoadingSpinner.vue
frontend/src/stores/: app.js
frontend/src/utils/: api.js
frontend/src/views/: AutoAnalysis.vue  ChatAnalysis.vue  Dashboard.vue  DataSources.vue  DataUpload.vue  Models.vue  Reports.vue
mcp_servers/: pyproject.toml
mcp_servers/fault_diagnosis/: INSTALL.md  README.md  pyproject.toml  run_server.py  test_tools.py
mcp_servers/fault_diagnosis/app/: __init__.py  __main__.py  data_source.py
mcp_servers/fault_diagnosis/app/tools/: __init__.py  _utils.py  fault_analysis.py  rule_mining.py
mcp_servers/spare_parts_forecast/: __init__.py  __main__.py  data_processor.py  data_source.py  fast_server.py  log.py  pyproject.toml
mcp_servers/spare_parts_forecast/app/: __main__.py  data_source.py  log.py
mcp_servers/spare_parts_forecast/app/forecasting/: analysis_results.py  croston.py  ema.py  sma.py  xgboost.py  zero_and_bp.py
mcp_servers/spare_parts_forecast/forecasting/: __init__.py  arima.py  arimaforecast.py  croston.py  ema.py  exponential_smoothing.py  forest.py  sma.py  xgboost.py  zero_and_bp.py
src/: App.vue  code_executor.py  dremio_client.py  env.d.ts  main.ts
src/assets/styles/: main.scss
src/chain/: __init__.py  _base.py  general_analysis.py  llm.py  nl_analysis.py  parallel_runner.py
src/components/: AddDatabaseDialog.vue  AppSidebar.vue  AssistantMessage.vue  AssistantMessageText.vue  DataSourceCard.vue  EmptyState.vue  FlowPanel.vue  LLMModelIcon.vue  LoadingSpinner.vue  MCPConnectionForm.vue  PageHeader.vue  ProcessFlow.vue
src/components/chat/: AgentModelConfigDialog.vue  AssistantMessage.vue  ChatInput.vue  ChatMessages.vue  ChatPanelHeader.vue  DatasetSelector.vue  FlowPanel.vue  FlowPanel.vue.exact  MCPManager.vue  ModelList.vue  ModelSelectDialog.vue  ModelSelector.vue  SessionEditDialog.vue  SessionSidebar.vue
src/components/data/: AddDatabaseDialog.vue  DataCleaningDialog.vue  DataSourceHeader.vue  DataSourceSearchBar.vue  DataSourceTable.vue  DataSourceUploadPanel.vue  EditDataSourceDialog.vue  PreviewDataDialog.vue
src/components/icons/: Deepseek.vue  Model.vue
src/components/mcp/: MCPConnectionForm.vue
src/components/workflow/: SaveWorkflowDialog.vue  WorkflowManager.vue
src/composables/: useChat.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/services/: workflow.ts
src/stores/: app.ts  datasource.ts  login.ts  mcp.ts  model.ts  session.ts  workflow.ts
src/types/: analysis.ts  chat.ts  cleaning.ts  dataSources.ts  dataset.ts  flow.ts  index.ts  mcp.ts  model.ts  report.ts  session.ts  workflow.ts
src/utils/: api.ts  dataSourceUtils.ts  keys.ts  tools.ts
src/views/: AutoAnalysis.vue  ChatAnalysis.vue  Dashboard.vue  DataManagement.vue  DataSources.vue  DataUpload.vue  LLMModels.vue  LoginView.vue  MCPConnections.vue  Models.vue  ModelsNew.vue  Reports.vue  TrainedModels.vue
templates/: chat_interface.html
(+72 files in other folders)
