[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fault-diagnosis-mcp"
version = "0.1.0"
description = "MCP服务器 - 提供机器故障诊断和预测维护工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
fault-diagnosis-mcp = "app.__main__:main"
