[project]
name = "spare-parts-forecast"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "wyf7685", email = "wyf7685@163.com" },
    { name = "Cccccwd", email = "1838935684@qq.com" },
]
dependencies = [
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mcp>=1.16.0",
    "numpy>=2.3.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
xgb = ["xgboost>=3.0.5"]
tf = ["tensorflow>=2.20.0"]
